--- a/html/img-upload-preview.html
+++ b/html/img-upload-preview.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>上传图片显示预览图</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<script>
 		//下面用于多图片上传预览功能
 		function setImagePreviews() {
