--- a/html/scrollbar.html
+++ b/html/scrollbar.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
 	<title>JS滚动条操作</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<style>
 		h2 {
 			padding-top: 20px;
