--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>单页Demo</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <style>
         body {
             font-family: Arial, sans-serif;
