添加M3U8在线播放器

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <h1>网站目录</h1>
     <ul>
         <li><a href="html/index.html">单页Demo</a></li>
+        <li><a href="m3u8/index.html">M3U8在线播放器</a></li>
         <li><a href="ws/index.html">WebSocket在线测试</a></li>
         <li><a href="exam/index.html">刷题网站</a></li>
         <!-- 在这里继续添加更多页面的标题和链接 -->
